tests/syntax_error/parentheses_embed_binary_file.jou
global thing = embed_binary_file "data.bin"  # Error: file name after embed_binary_file must be in parentheses, e.g. embed_binary_file("image.png")
